# codejam_history

./: CMakeLists.txt  README.md
2017/round_1a/: alphabetcake.cpp  playthedragon.cpp  playthedragon.py  playthedragontest.py  ratatouille.cpp
2017/round_1b/: cruisecontrol.cpp  ponyexpress.cpp  stableneighbors.cpp
2017/round_1c/: amplesyrup.cpp  coretraining.cpp  parentingpartnering.cpp
2017/round_2/: _shoottheturrets.cpp  beaming_larger.in  beaming_larger.out  beaming_small.in  beaming_small.out  beaming_with_joy.py  beamingwithjoy.cpp  freshchocolate.cpp  rollercoasterscheduling.cpp
2017/round_3/: goodnews_and_badnews.py  googlements.py  mountain_tour.py  slate_modern.py
2017/round_final/: dice_straight.py  omnicircumnavigation.py  operation.py  spanning_planning.py  stack_management.py  teleporters.py
2017/round_q/: bathroomstalls.cpp  fasionshow.cpp  oversizedpancakeflipper.cpp  tidynumbers.cpp
2018/round_1a/: bit_party.cpp  edgy_baking.cpp  waffle_choppers.cpp
2018/round_1b/: mysterious_road_signs.cpp  rounding_error.cpp  transmutation.cpp
2018/round_1c/: a_whole_new_world.cpp  ant_stack.cpp  lolli_shop.cpp
2018/round_2/: costume_change.cpp  falling_balls.cpp  graceful_chainsaw_jugglers.cpp
2018/round_3/: fence_construction.py  field_trip.py  name_preserving_network.py  raise_the_roof.py
2018/round_final/: go_gophers.py  jurisdiction_restrictions.py  jurisdiction_restrictions2.py  swordmaster.py  the_cartesian_job.py  two_tiling.py
2018/round_q/: cubic_ufo.cpp  go_gopher.cpp  saving_the_universe_again.cpp  trouble_sort.cpp
2019/round_1a/: alien_rhymes.py  golf_gophers.py  golf_gophers2.py  pylons.py
2019/round_1b/: draupnir.py  fair_flight.py  fair_flight.test_generator.py  fair_flight2.py  manhattan_crepe_cart.py
2019/round_1c/: bacterial_tactics.py  power_arrangers.py  (+1 more)
(+26 files in other folders)
